[package]
name = "plonky3_randomx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-air = {path = "../Plonky3/air" }
p3-field = {path = "../Plonky3/field" }
p3-matrix = {path = "../Plonky3/matrix" }
p3-mersenne-31 = {path = "../Plonky3/mersenne-31" }
p3-util = {path = "../Plonky3/util" }
p3-baby-bear = {path = "../Plonky3/baby-bear" }
p3-challenger = {path = "../Plonky3/challenger" }
p3-circle = {path = "../Plonky3/circle" }
p3-commit = {path = "../Plonky3/commit" }
p3-dft = {path = "../Plonky3/dft" }
p3-fri = {path = "../Plonky3/fri" }
# p3-blake3 = {path = "../Plonky3/" }
p3-keccak = {path = "../Plonky3/keccak" }
p3-mds = {path = "../Plonky3/mds" }
p3-merkle-tree = {path = "../Plonky3/merkle-tree" }
p3-poseidon = { path = "../Plonky3/poseidon" }
p3-poseidon2 = { path = "../Plonky3/poseidon2" }
p3-symmetric = {path = "../Plonky3/symmetric" }
p3-uni-stark = {path = "../Plonky3/uni-stark" }
p3-bn254-fr = {path = "../Plonky3/bn254-fr" }
#p3-bn254-fr = "0.1.4-succinct"
#p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }


# p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-circle = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
# p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3.git" }

# p3-air = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-field = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-commit = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-matrix = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-util = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-challenger = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-dft = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-fri = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-keccak = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-blake3 = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-mds = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }
# p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v3" }

# p3-air = "0.1.4-succinct"
# p3-field = "0.1.4-succinct"
# p3-commit = "0.1.4-succinct"
# p3-matrix = "0.1.4-succinct"
# p3-baby-bear = { version = "0.1.4-succinct", features = ["nightly-features"] }
# p3-util = "0.1.4-succinct"
# p3-challenger = "0.1.4-succinct"
# p3-dft = "0.1.4-succinct"
# p3-fri = "0.1.4-succinct"
# p3-goldilocks = "0.1.4-succinct"
# p3-keccak = "0.1.4-succinct"
# p3-keccak-air = "0.1.4-succinct"
# p3-blake3 = "0.1.4-succinct"
# p3-mds = "0.1.4-succinct"
# p3-merkle-tree = "0.1.4-succinct"
# p3-poseidon2 = "0.1.4-succinct"
# p3-symmetric = "0.1.4-succinct"
# p3-uni-stark = "0.1.4-succinct"
# p3-maybe-rayon = "0.1.4-succinct"
# p3-bn254-fr = "0.1.4-succinct"

rand = "0.8.5"
# sp1-primitives = { version = "3.3.0", path = "../sp1/crates/primitives" }
# sp1-stark = { version = "3.3.0", path = "../sp1/crates/stark" }
# sp1-prover = { version = "3.3.0", path = "../sp1/crates/prover" }
# sp1-core-executor = { version = "3.3.0", path = "../sp1/crates/core/executor" }
# sp1-core-machine = { version = "3.3.0", path = "../sp1/crates/core/machine" }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
serde = "1.0.215"
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.133"
itertools = "0.13.0"
zkhash = "0.2.0"
ff = "0.13.0"

